// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyTextarea オプション rows rows属性変更 1`] = `
Object {
  "class": "form-control",
  "id": "sample_field",
  "rows": "10",
}
`;

exports[`MyTextarea バリデーションエラー 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <textarea
      class="form-control is-invalid"
      id="sample_field"
      rows="3"
    />
    <!---->
    <!---->
    <div
      class="invalid-feedback"
    >
      エラーです
    </div>
    <!---->
  </div>
</div>
`;

exports[`MyTextarea 通常 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <textarea
      class="form-control"
      id="sample_field"
      rows="3"
    />
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;
